Change source and target language back to 1.8
Since this project is a library, we should try to support as many old
Java versions as possible, unless there is a good reason to require a
more recent version.